# Lushlyrics

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
frontend/src/application/: index.js
frontend/src/styles/: index.css
frontend/webpack/: webpack.config.dev.js
main/: forms.py  urls.py  views.py
static/: manifest.json
static/css/: index.css
static/js/: index.js  runtime.js  vendors-node_modules_mini-css-extract-plugin_dist_hmr_hotModuleReplacement_js-node_modules_we-27b122.js
templates/: base.html  player.html
templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/home/: home.html
templates/socialaccount/: login.html
youtify/: settings.py
