[tool.poetry]
name = "lushlyrics"
version = "0.1.0"
description = "Frontend support for the lushlyrics web application"
authors = ["Francisco <francisco.oro@comunidad.unam.mx>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-webpack-boilerplate = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
